[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameObjects/Barrel.gd" type="Script" id=1]
[ext_resource path="res://GameObjects/RayRect.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 3.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 11 )

[sub_resource type="CircleShape2D" id=3]
radius = 44.0

[node name="Barrel" type="KinematicBody2D" groups=["Barrel"]]
collision_layer = 520
collision_mask = 12
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3.5 )
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -7.0
margin_top = -22.0
margin_right = 7.0
color = Color( 1, 0.0666667, 0.0666667, 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -11 )
shape = SubResource( 1 )

[node name="ExplosionArea" type="Area2D" parent="."]
collision_mask = 13
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
position = Vector2( 0, -4 )
shape = SubResource( 3 )

[node name="RayRect" parent="." instance=ExtResource( 2 )]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="ExplosionArea" to="." method="_on_ExplosionArea_body_entered"]
